--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Olitas</title>
 </head>
 <body>
-    <p>JAJAJAJAJ XD</p>
+    <p>el que lo lee es kbro JAJAJAJAJ XD</p>
 </body>
 </html>
